# GNN_Variants_thesis

./: .dockerignore  Dockerfile  README.md  pyproject.toml
code/counterexample/: M-k-WL_Counterexample.ipynb  S-k-WL_Counterexample.ipynb  TM-k-FWL_Counterexample.ipynb  k-FWL_Counterexample.ipynb
code/main_methods/: main_1-GNN.py  main_2-LGNN.py  main_GcnMean.py  main_GcnSum.py  main_GraphSage.py  main_M-2-GNN.py  main_M-2-LGNN.py  main_M-3-LGNN.py  main_ST-2-GNN.py  main_ST-2-LGNN.py  main_ST-3-LGNN.py  main_create_train_plots.py  main_gin.py  main_kernel.py  main_onegnn.py  main_speed_ratios.py
code/main_methods/auxiliarymethods/: auxiliary_methods.py  datasets.py  kernel_evaluation.py  multiset_datasets.py
code/main_methods/kernel_models/: kernel_models.cpp
code/main_methods/kernel_models/src/: AuxiliaryMethods.cpp  AuxiliaryMethods.h  ColorRefinementKernel.cpp  ColorRefinementKernel.h  GenerateTwo.cpp  GenerateTwo.h  Graph.cpp  Graph.h  GraphletKernel.cpp  GraphletKernel.h  ShortestPathKernel.cpp  ShortestPathKernel.h
code/main_methods/neural_models/: GIN.py  GcnSum.py  Gcn_Mean.py  GraphSAGE.py  NetGin.py  OneGnn.py  OneTwoGnn.py
code/main_methods/preprocessing/: preprocessing.cpp
code/main_methods/preprocessing/src/: AuxiliaryMethods.cpp  Graph.cpp  Graph.h
code/thesis_set_counterexample/: M-k-WL_Counterexample.ipynb  MT-k-FWL_Counterexample.ipynb  k_FWL_Counterexample.ipynb  set_k_WL_Counterexample.ipynb
